<?xml version="1.0" encoding="UTF-8"?>

<resources>
    <!-- Menu items -->
    <string name="search">Rescan</string>
    <string name="testInfo">You are now in test mode</string>
    <string name="scan_end">Scan Complete</string>
    
    
    <!-- Occupy Pages  -->
    <string name="logo_desc">Logo</string>
    <string name="occ_now">Occupy</string>
    <string name="occupy_ltr">Occupy Later</string>
    <string name="meeting">Meeting Name</string>
    <string name="edt_date">Touch to set date</string>
    <string name="edt_time">Touch to set time</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="startT">Start @</string>
    <string name="endT">End @</string>
    <string name="occupation">Details</string>
    <string name="availibility">Availility</string>
    
    <!-- Filler for app -->
    <string name="location">Location</string>
    <string name="capacity">Capacity</string>
    <string name="webcam">Webcam</string>
    <string name="phone">Phone</string>
    <string name="roomName">roomName</string>
    <string name="owner">Owner</string>
    
    
    <string name="booking_made">Occupied!</string>
    <string name="booking_error">Error</string>
    

    
    
      
</resources>