<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vetch" >

         <EditText
             android:id="@+id/edtDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/edtEndTime"
             android:layout_alignRight="@+id/edtStartTime"
             android:layout_below="@+id/txtMeetingName"
             android:ems="10"
             android:focusable="false"
             android:hint="@string/edt_date"
             android:inputType="date"
             android:onClick="showDatePickDialog"
             android:textColor="@color/white" >
         </EditText>

         <EditText
             android:id="@+id/edtStartTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/edtEndTime"
             android:layout_alignRight="@+id/edtEndTime"
             android:layout_alignTop="@+id/txtStartT"
             android:ems="10"
             android:focusable="false"
             android:hint="@string/edt_time"
             android:onClick="InputStartTime"
             android:textColor="@color/white" />

         <Button
             android:id="@+id/btnSave"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_marginBottom="138dp"
             android:onClick="btnBook"
             android:text="@string/occupy_ltr"
             android:textColor="@color/orange"
             android:textSize="40sp" />

         <EditText
             android:id="@+id/edtEndTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/edtStartTime"
             android:layout_marginRight="14dp"
             android:ems="10"
             android:focusable="false"
             android:hint="@string/edt_time"
             android:onClick="InputEndTime"
             android:textColor="@color/white" >

         </EditText>

         <TextView
             android:id="@+id/txtStartT"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/edtDate"
             android:layout_toLeftOf="@+id/edtStartTime"
             android:text="@string/startT"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white" />

         <TextView
             android:id="@+id/txtEndT"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/edtEndTime"
             android:layout_alignBottom="@+id/edtEndTime"
             android:layout_alignLeft="@+id/txtStartT"
             android:text="@string/endT"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white" />

         <TextView
             android:id="@+id/txtDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/edtDate"
             android:layout_alignBottom="@+id/edtDate"
             android:layout_alignLeft="@+id/txtStartT"
             android:text="@string/date"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white" />

         <TextView
             android:id="@+id/txtMeetingName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/edtMeetingName"
             android:layout_alignBottom="@+id/edtMeetingName"
             android:layout_alignLeft="@+id/txtDate"
             android:text="@string/name"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white" />

         <TextView
             android:id="@+id/txtDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:text="@string/occupation"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/blue"
             android:textSize="48sp" />

         <EditText
             android:id="@+id/edtMeetingName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_alignLeft="@+id/edtDate"
             android:layout_below="@+id/txtDetails"
             android:ems="10"
             android:focusable="false"
             android:hint="@string/meeting"
             android:tag="edtMeetingName"
             android:textColor="@color/white" />

</RelativeLayout>
